# rfp-ofsaa

./: .dockerignore  .env.example  CLAUDE.md  DEPLOYMENT.md  DOCUMENT_UPLOAD_PLAN.md  Dockerfile  LLM_FARM_INTEGRATION_STATUS.md  PRODUCTION_READINESS_ANALYSIS.md  README.md  RFP_INTEGRATION_PLAN.md  config.py  docker-compose.yml  health.py  main.py  preaslesagent.py  pyproject.toml
New folder/src/app/: layout.tsx  page.tsx
New folder/src/app/chat-with-doc/: page.tsx
New folder/src/app/design-system/: page.tsx
New folder/src/components/: AnimatedBackground.tsx  DocumentDisplay.tsx  MarkdownCanvas.tsx  MarkdownRenderer.tsx
New folder/src/components/modals/: HelpModal.tsx  ProgressModal.tsx  UploadConfirmModal.tsx
New folder/src/components/ui/: Layout.tsx
frontend/: .dockerignore  Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  package.json  tailwind.config.js
frontend/__tests__/components/: AnimatedBackground.test.tsx  Button.test.tsx  Card.test.tsx  DocumentDisplay.test.tsx  Layout.test.tsx  MarkdownCanvas.test.tsx  MarkdownRenderer.test.tsx  TextSelectionToolbar.test.tsx  TypingIndicator.test.tsx
frontend/__tests__/hooks/: useHistory.test.ts
frontend/__tests__/integration/: chat-flow.test.tsx  error-handling.test.tsx  fsd-workflow.test.tsx  multi-pdf-upload.test.tsx  presales-workflow.test.tsx
frontend/__tests__/pages/: chat.test.tsx  design-system.test.tsx  fsd.test.tsx  home.test.tsx  presales.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/fsd/: page.tsx
frontend/src/app/llm-farm/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/presales/: page.tsx
frontend/src/app/presales/agent/: page.tsx
frontend/src/app/presales/rfp/: page.tsx
frontend/src/components/: Button.tsx  Layout.tsx  MarkdownCanvas.tsx  RfpProcessor.tsx  TextSelectionToolbar.tsx
frontend/src/components/llm-farm/: app-sidebar.tsx  conversation.tsx  message-display.tsx  model-selector.tsx  search-input.tsx
frontend/src/components/modals/: ClearConfirmModal.tsx  HelpModal.tsx  ProgressModal.tsx  UploadConfirmModal.tsx  VersionHistoryModal.tsx
frontend/src/components/ui/: Layout.tsx  sidebar.tsx
frontend/src/hooks/: useHistory.ts
frontend/src/lib/: api.ts  llm-farm-api.ts  llm-storage.ts
frontend/src/types/: index.ts
middlewares/: __init__.py  security.py
newfolder/src/: jest.config.js  jest.setup.js
newfolder/src/app/: globals.css
newfolder/src/app/excelbot/: page.tsx
newfolder/src/app/fsd-generator/: page.tsx
newfolder/src/components/: TextSelectionToolbar.tsx  TypingIndicator.tsx
newfolder/src/components/modals/: ClearConfirmModal.tsx  VersionHistoryModal.tsx
newfolder/src/components/ui/: Card.tsx  index.ts
newfolder/src/constants/: theme.ts
newfolder/src/hooks/: useHistory.ts
services/: ai_service.py  config.py  fsd.py  llm_farm.py  organization.py  presales.py  rfp.py  rfp_models.py  rfp_routes.py  text_extraction.py
tests/: conftest.py  test_main.py  test_middlewares.py
tests/services/: test_ai_service.py  test_fsd.py  test_presales.py  test_rfp.py
utils/: __init__.py  logger.py
