[project]
name = "rfp-ofsaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "docling>=2.44.0",
    "fastapi>=0.116.1",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    # FSD agent dependencies
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    # Document parsing dependencies
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
