[project]
name = "rfp-ofsaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "docling>=2.44.0",
    "fastapi>=0.116.1",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    # FSD agent dependencies
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    # Presales agent dependencies
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "hf-xet>=1.1.7",
    "reportlab>=4.4.4",
    "duckduckgo-search>=8.1.1",
    "pypdf>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
]
