[project]
name = "rfp-ofsaa"
version = "0.1.0"
description = "RFP OFSAA - AI-Powered Document Processing Platform"
readme = "README.md"
requires-python = ">=3.13.0,&lt;3.14"
dependencies = [
    "docling&gt;=2.44.0",
    "fastapi&gt;=0.116.1",
    "openai&gt;=1.99.9",
    "python-dotenv&gt;=1.1.1",
    "python-multipart&gt;=0.0.20",
    "uvicorn&gt;=0.35.0",
    # FSD agent dependencies
    "numpy&gt;=1.24.0",
    "qdrant-client&gt;=1.7.0",
    "python-docx&gt;=1.1.0",
    "pdfplumber&gt;=0.10.0",
    # Presales agent dependencies
    "pandas&gt;=2.0.0",
    "openpyxl&gt;=3.1.0",
    "loguru&gt;=0.7.0",
    "mcp&gt;=1.0.0",
    "hf-xet&gt;=1.1.7",
    "reportlab&gt;=4.4.4",
    "duckduckgo-search&gt;=8.1.1",
    "pypdf&gt;=6.1.1",
    # RFP integration dependencies
    "structlog&gt;=23.2.0",
    "httpx&gt;=0.25.0",
    "aiofiles&gt;=23.2.0",
    # Production dependencies
    "pydantic-settings&gt;=2.0.0",
    "redis&gt;=5.0.0",
    "psutil&gt;=5.9.0",
]
    "docling>=2.44.0",
    "fastapi>=0.116.1",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    # FSD agent dependencies
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    # Presales agent dependencies
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "hf-xet>=1.1.7",
    "reportlab>=4.4.4",
    "duckduckgo-search>=8.1.1",
    "pypdf>=6.1.1",
    # Production dependencies
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "structlog>=23.2.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
]
